Add gameboy design

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>THREE.js</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./src/styles.css" />
+    <link rel="stylesheet" href="src/styles.scss" />
     <link rel="icon" href="src/assets/me.ico" />
   </head>
 
