Add more gameboy like styling and sound playing on button click

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>THREE.js</title>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="src/styles.scss" />
-    <link rel="icon" href="src/assets/me.ico" />
-  </head>
+<head>
+  <title>THREE.js</title>
+  <meta charset="UTF-8"/>
+  <link rel="stylesheet" href="src/styles.scss"/>
+  <link rel="icon" href="src/assets/me.ico"/>
+</head>
 
-  <body>
-    <div id="scene-container"></div>
-    <script src="src/index.ts"></script>
-  </body>
+<body>
+
+  <div id="scene-container"></div>
+  <script src="src/index.ts"></script>
+  <audio id="audio" src="https://alramalhosandbox.s3.eu-west-1.amazonaws.com/mixkit-arcade-game-jump-coin-216.wav"></audio>
+
+</body>
 </html>
