--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8"/>
   <link rel="stylesheet" href="src/styles.scss"/>
   <link rel="icon" href="src/assets/me.ico"/>
+  <meta name="viewport" content="width=device-width">
 
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -40,7 +41,6 @@
   </div>
 </div>
 
-<div id="scene-container"></div>
 <script src="src/index.ts"></script>
 <audio id="audio"
        src="https://alramalhosandbox.s3.eu-west-1.amazonaws.com/mixkit-arcade-game-jump-coin-216.wav"></audio>
