--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,8 +42,8 @@
 </div>
 
 <script src="src/index.ts"></script>
-<audio id="audio"
-       src="https://alramalhosandbox.s3.eu-west-1.amazonaws.com/mixkit-arcade-game-jump-coin-216.wav"></audio>
+<audio id="button-sound" src="https://alramalhosandbox.s3.eu-west-1.amazonaws.com/mixkit-arcade-game-jump-coin-216.wav"></audio>
+<audio id="route1-pokemon" src="https://alramalhosandbox.s3.eu-west-1.amazonaws.com/pokemon-route1.wav"></audio>
 
 </body>
 </html>
