Open CV on select click

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,7 +38,7 @@
           <p>X = Start</p>
 
 
-          <p style="margin-top: 3rem; font-size: 0.5rem">Have fun with konami</p>
+          <p style="margin-top: 8rem; font-size: 0.5rem">Have fun with konami code</p>
         </div>
       </div>
       <div class="info-banner">
