Add iframe discalimer

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,6 +47,10 @@
         </p>
       </div>
     </div>
+    <div class="popup iframe-disclaimer">
+      <i class="fa-solid fa-circle-info"></i>
+      Some websites might not show due do XSS policies. Please visit the real site instead.
+    </div>
     <div class="header">
       <svg width="100%" height="100%" viewBox="0 0 1276 237"
            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
