Change meta tags

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>THREE.js</title>
+  <title>Alex's corner</title>
+  <meta name="description" content="Alex Ramalho website in a gameboy color fashion">
+  <meta name="keywords" content="HTML, CSS, Gameboy, Color, Nintendo, Alex, Al, Alexandre, Ramalho">
+  <meta name="author" content="Alexandre Ramalho">
   <meta charset="UTF-8"/>
   <link rel="stylesheet" href="src/styles.scss"/>
   <link rel="icon" href="src/assets/me.ico"/>
