Add error sound

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -79,10 +79,12 @@
 </div>
 
 <script src="src/index.ts"></script>
-<audio id="button-sound"
-       src="https://alramalhosandbox.s3.eu-west-1.amazonaws.com/mixkit-arcade-game-jump-coin-216.wav"></audio>
-<audio id="route1-pokemon"
-       src="https://alramalhosandbox.s3.eu-west-1.amazonaws.com/pokemon-route1.wav"></audio>
+<audio id="success"
+       src="https://alramalhosandbox.s3.eu-west-1.amazonaws.com/sounds/mixkit-arcade-game-jump-coin-216.wav"></audio>
+<audio id="error"
+       src="https://alramalhosandbox.s3.eu-west-1.amazonaws.com/sounds/bump.wav"></audio>
+<audio id="konami"
+       src="https://alramalhosandbox.s3.eu-west-1.amazonaws.com/sounds/item-received.wav"></audio>
 
 </body>
 </html>
