Add menu that explains cube

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,6 +49,16 @@
         <p class="content">
         </p>
       </div>
+      <div class="cube-menu">
+<!--        <p>On the cube</p>-->
+<!--        <ul>-->
+<!--          <li><u>ipo-track</u></li>-->
+<!--          <li><u>hire-alramalho</u></li>-->
+<!--          <li><u>radialcor</u></li>-->
+<!--          <li><u>blog</u></li>-->
+<!--          <li>compound composer</li>-->
+<!--        </ul>-->
+      </div>
     </div>
     <div class="header">
       <svg width="100%" height="100%" viewBox="0 0 1276 237"
