Do info banner and User navigation adjustments

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,19 +45,11 @@
         </div>
       </div>
       <div class="info-banner">
-        <p class="title"></p>
-        <p class="content">
-        </p>
+        <div class="title"></div>
+        <div class="content">
+        </div>
       </div>
       <div class="cube-menu">
-<!--        <p>On the cube</p>-->
-<!--        <ul>-->
-<!--          <li><u>ipo-track</u></li>-->
-<!--          <li><u>hire-alramalho</u></li>-->
-<!--          <li><u>radialcor</u></li>-->
-<!--          <li><u>blog</u></li>-->
-<!--          <li>compound composer</li>-->
-<!--        </ul>-->
       </div>
     </div>
     <div class="header">
