Change control help

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,10 +25,10 @@
         <div class="title">Help menu</div>
         <div class="content">
           <h3>Controls</h3>
-          <p>&uarr; — Show info banner</p>
-          <p>&darr; — Hide info banner</p>
-          <p>&larr; — Rotate cube left</p>
-          <p>&rarr; — Rotate cube right</p>
+          <p>&uarr; — Show info banner & Move cube up (only in selected stage)</p>
+          <p>&darr; — Hide info banner & Move cube up (only in selected stage)</p>
+          <p>&larr; — Rotate cube left (only in initial stage)</p>
+          <p>&rarr; — Rotate cube right (only in initial stage)</p>
           <p>A — Select</p>
           <p>B — Retrocede</p>
           <p>Start — Show/hide controls</p>
