--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Alexandre Ramalho">
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="src/styles.scss" />
-  <link rel="icon" href="src/assets/me.ico" />
+  <link rel="icon" href="src/assets/game-boy.ico" />
   <meta name="viewport" content="width=device-width">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
